<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just java</string>
    <string name="hint_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name:<xliff:g example="Amy" id="name">%s</xliff:g>  </string>
    <string name="order_summary_activity">Order Summary</string>
    <string name="thank_you">Thank You</string>
</resources>